--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-openai>=0.0.5
 langgraph>=0.0.20
 langsmith>=0.0.66
-pydantic>=2.5.0
+pydantic>=2.7.0
 python-dotenv>=1.0.0
 openai>=1.10.0
 fastapi>=0.110.0
-uvicorn>=0.25.0 
+uvicorn>=0.25.0
+typing-extensions>=4.8.0
+regex>=2023.0.0
